--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
     "flat": "^4.0.0",
     "got": "^8.1.0",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "react-native-cheerio": "^1.0.0-rc.4"
   },
   "devDependencies": {
     "jest": "^22.3.0",
